--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,13 @@ code {
 }
 
 /* tablets and desktops */
+@media screen and (min-width: 768px) {
+  .main-container {
+    margin: auto;
+    width: 75%;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .main-container {
     margin: auto;
@@ -154,6 +161,7 @@ h1 {
   justify-content: center;
   margin: 8px;
   width: 56px;
+  cursor: pointer;
 }
 
 @keyframes flash {
