--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* create-react-app default css */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,6 +13,15 @@ code {
     monospace;
 }
 
+/* my CSS starts here */
+/* I decided to use vanilla CSS instead of tailwindcss, bootstrap etc */
+:root {
+  --border-radius: 10px;
+  --main-color: #333;
+  --background-color: #eee;
+  --accent-color: #ddd;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -20,7 +30,7 @@ code {
   justify-content: center;
 }
 
-/* tablets and desktops */
+/* for larger screens (I designed this app mobile-first) */
 @media screen and (min-width: 768px) {
   .main-container {
     margin: auto;
@@ -39,61 +49,56 @@ table {
   text-align: center;
   width: 90%;
   border-collapse: collapse;
-  border-radius: 10px;
   table-layout: fixed;
 }
 
 table th {
-  background-color: #ddd;
+  background-color: var(--accent-color);
   font-size: 20px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  padding: 10px;
 }
 
 /* CSS needs a proper way to round table corners lol */
-.end-screen th:nth-child(1) {
-  border-top-right-radius: 0;
+table thead tr th:first-child {
+  border-top-left-radius: var(--border-radius);
 }
 
-.end-screen th:nth-child(2) {
-  border-radius: 0;
+table thead tr th:last-child {
+  border-top-right-radius: var(--border-radius);
 }
 
-.end-screen th:nth-child(3) {
-  border-top-left-radius: 0;
+table tr:last-child td:first-child {
+  border-bottom-left-radius: var(--border-radius);
 }
 
-/* table thead tr th:first th:last {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-} */
+table tr:last-child td:last-child {
+  border-bottom-right-radius: var(--border-radius);
+}
 
 .end-screen td:first-child {
   font-weight: 700;
 }
 
-table,
-th,
-td {
-  background-color: #eee;
+table td {
+  background-color: var(--background-color);
   padding: 10px;
   font-size: 18px;
 }
 
-table td {
-  border-radius: 10px;
-}
-
 button {
-  background-color: #333;
+  background-color: var(--main-color);
   border: none;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   color: #fff;
   cursor: pointer;
 }
 
+button:hover {
+  background-color: #444;
+}
+
 .pencil {
-  background-color: #ddd;
+  background-color: var(--accent-color);
 }
 
 button:disabled {
@@ -118,7 +123,7 @@ input {
   flex: 1;
   width: 100%;
   text-align: center;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   border-width: 1px;
   outline: none;
 }
@@ -147,19 +152,19 @@ h1 {
   align-items: center;
   justify-content: center;
   margin-bottom: 16px;
+  gap: 20px;
 }
 
 .scrabble div {
   align-items: center;
-  background-color: #333;
-  border-radius: 10px;
+  background-color: var(--main-color);
+  border-radius: var(--border-radius);
   color: #fff;
   display: flex;
   font-size: 24px;
   font-weight: 700;
   height: 56px;
   justify-content: center;
-  margin: 8px;
   width: 56px;
   cursor: pointer;
 }
